tests/rosetta/out/Fortran/array-concatenation.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program array_concatenation
  implicit none
  integer, dimension(3) :: a
  integer, dimension(3) :: b
  integer, dimension(3) :: i
  integer, dimension(4) :: j
  integer, dimension(3) :: l
  integer, dimension(3) :: m
  character(len=100) :: s0
  character(len=100) :: s1
  character(len=100) :: s2
    integer, dimension(0) :: out
    integer :: v
    integer :: i3
      integer, allocatable, dimension(:) :: app4
    integer :: i5
      integer, allocatable, dimension(:) :: app6
    integer :: i7
      integer, allocatable, dimension(:) :: app8
    integer :: i9
      integer, allocatable, dimension(:) :: app10
  a = (/1,2,3/)
  b = (/7,12,60/)
  write(s0,'(G0)') concatInts(a,b)
  print *, s0
  i = (/1,2,3/)
  j = (/'Crosby','Stills','Nash','Young'/)
  write(s1,'(G0)') concatAny(i,j)
  print *, s1
  l = (/1,2,3/)
  m = (/7,12,60/)
  write(s2,'(G0)') concatInts(l,m)
  print *, s2
  contains
  recursive integer function concatInts(a,b) result(res)
    integer, intent(in) :: a
    integer, intent(in) :: b
    out = (//)
    do i3 = 1, size(a)
      v = a(i3)
      allocate(app4(size(out)+1))
      app4(1:size(out)) = out
      app4(size(out)+1) = v
      out = app4
    end do
    do i5 = 1, size(b)
      v = b(i5)
      allocate(app6(size(out)+1))
      app6(1:size(out)) = out
      app6(size(out)+1) = v
      out = app6
    end do
    res = out
    return
  end function concatInts
  recursive integer function concatAny(a,b) result(res)
    integer, intent(in) :: a
    integer, intent(in) :: b
    out = (//)
    do i7 = 1, size(a)
      v = a(i7)
      allocate(app8(size(out)+1))
      app8(1:size(out)) = out
      app8(size(out)+1) = v
      out = app8
    end do
    do i9 = 1, size(b)
      v = b(i9)
      allocate(app10(size(out)+1))
      app10(1:size(out)) = out
      app10(size(out)+1) = v
      out = app10
    end do
    res = out
    return
  end function concatAny
end program array_concatenation
